--- a/Image_classification_with_CNN.ipynb
+++ b/Image_classification_with_CNN.ipynb
@@ -6,8 +6,7 @@
       "name": "CNN.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMdGXT232JK1LJrlu9BWd3N",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMdGXT232JK1LJrlu9BWd3N"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Sanaz-salari/Pneumonia_Detection_ChestXray_CNN/blob/main/Image_classification_with_CNN.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
